--- a/src/data/appData.json
+++ b/src/data/appData.json
@@ -800,7 +800,7 @@
         "type": "Meetup",
         "host": "GEN 22 On Sloane",
         "date": "2025-07-30T22:00:00.000Z",
-        "time": "17:30  - 19:00",
+        "time": "17:30  - 19:00 SAST",
         "location": "Cnr Winnie Mandela Drive and Sloane Street, Bryanston, 2191, Johannesburg, South Africa",
         "locationUrl": "",
         "description": "Startup Huddle: From Start to Scale – Building a Strong Foundation, is a bold and new monthly series hosted at 22 On Sloane, where alumni and resident founders come together to share what they’re building, the challenges they’re facing, and get real-time feedback from their peers and ecosystem mentors.\n\n \n\nEach session features two entrepreneurs who take us behind the scenes of their startup journey — offering an unfiltered look into the ups and downs of building a business. Through live input and community discussion, the goal is to learn together, grow together, and build stronger foundations for our ventures.\n\nEach edition of Startup Huddle will feature a different theme — keeping the format fresh, relevant, and driven by the needs of our founder community.",
@@ -814,7 +814,7 @@
         "type": "Webinar",
         "host": "Sloane Hub Academy",
         "date": "2024-08-15T14:00:00Z",
-        "time": "2:00 PM - 3:00 PM SAST",
+        "time": "14:00 - 15:00 SAST",
         "location": "Virtual",
         "locationUrl": "https://zoom.us/j/1234567890",
         "description": "Join our expert panel as they break down successful go-to-market strategies tailored for the unique challenges and opportunities within the African market. Learn about channel strategies, customer acquisition, and pricing.",
@@ -827,7 +827,7 @@
         "type": "Demo",
         "host": "FinConnect",
         "date": "2024-08-20T11:00:00Z",
-        "time": "11:00 AM - 11:45 AM SAST",
+        "time": "11:00 - 11:45 SAST",
         "location": "Virtual",
         "locationUrl": "https://teams.microsoft.com/l/meetup-join/12345",
         "description": "See our powerful financial API in action. In this live demo, we will walk you through integrating FinConnect to handle KYC, process payments, and access banking data across multiple African countries seamlessly.",
@@ -840,7 +840,7 @@
         "type": "Meetup",
         "host": "Sloane Hub & Partners",
         "date": "2024-08-28T18:00:00Z",
-        "time": "6:00 PM onwards",
+        "time": "18:00 onwards",
         "location": "Workshop17, V&A Waterfront, Cape Town",
         "locationUrl": "https://maps.google.com/?q=Workshop17+V%26A+Waterfront",
         "description": "An exclusive, in-person networking event for startup founders and investors in the Cape Town ecosystem. Build connections, share ideas, and discover collaboration opportunities over drinks and canapés.",
@@ -853,7 +853,7 @@
         "type": "Webinar",
         "host": "RetailFlow",
         "date": "2024-09-05T13:00:00Z",
-        "time": "1:00 PM - 2:00 PM SAST",
+        "time": "13:00 - 14:00 SAST",
         "location": "Virtual",
         "locationUrl": "https://zoom.us/j/1234567890",
         "description": "Learn how to digitize your operations, manage inventory effectively, and expand your customer base with our all-in-one retail management platform. This webinar is perfect for small and medium-sized retailers.",
