--- a/src/data/appData.json
+++ b/src/data/appData.json
@@ -2175,5 +2175,15 @@
       "status": "active",
       "tenantId": "public"
     }
+  ],
+  "users": [
+    {
+      "email": "khulekani@22onsloane.co",
+      "tenantId": "22onsloane",
+      "role": "admin"
+    }
+  ],
+  "tenants": [
+    { "id": "22onsloane", "name": "22 On Sloane" }
   ]
 }
