User role management (Updated)

--- a/src/data/appData.json
+++ b/src/data/appData.json
@@ -2273,17 +2273,17 @@
     },
     {
       "id": "tAsFySNxnsW4a7L43wMRVLkJAqE3",
-      "name": "khulekani",
-      "kycStatus": "approved",
+      "name": "22 On Sloane",
+      "kycStatus": "pending",
       "contactEmail": "khulekani@22onsloane.co",
       "ownerUid": "tAsFySNxnsW4a7L43wMRVLkJAqE3",
-      "phone": "",
+      "phone": "+27763732884",
       "website": "",
       "description": "",
-      "logoUrl": "",
+      "logoUrl": "https://www.22onsloane.co/wp-content/uploads/2025/08/22-On-Sloane_Logo-Empowering-01.png",
       "bannerUrl": "",
-      "country": "",
-      "city": "",
+      "country": "South Africa",
+      "city": "Sandton",
       "addressLine": "",
       "socials": {
         "twitter": "",
