feat(auth): refresh Firebase ID token in interceptor, handle 401/403 with forced refresh and sign-out flow

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.4",
+    "@types/firebase": "^3.2.3",
     "animate.css": "^4.1.1",
     "apexcharts": "^4.4.0",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.5.0",
     "cors": "^2.8.5",
@@ -36,7 +38,7 @@
     "datatables.net-dt": "^2.3.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "firebase": "^12.1.0",
+    "firebase": "^12.3.0",
     "firebase-admin": "^13.4.0",
     "flatpickr": "^4.6.13",
     "helmet": "^8.1.0",
