--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,14 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon server.js",
-    "start": "node server.js",
-    "lint": "eslint ."
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -22,13 +22,5 @@
   "devDependencies": {
     "eslint": "^9.9.0",
     "nodemon": "^3.1.7"
-  },
-
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
   }
 }
-
-
