--- a/src/data/appData.json
+++ b/src/data/appData.json
@@ -828,7 +828,7 @@
       "time": "17:30  - 19:00 SAST",
       "location": "Cnr Winnie Mandela Drive and Sloane Street, Bryanston, 2191, Johannesburg, South Africa",
       "locationUrl": "",
-      "description": "Startup Huddle: From Start to Scale – Building a Strong Foundation, is a bold and new monthly series hosted at 22 On Sloane, where alumni and resident founders come together to share what they’re building, the challenges they’re facing, and get real-time feedback from their peers and ecosystem mentors.\n\n \n\nEach session features two entrepreneurs who take us behind the scenes of their startup journey — offering an unfiltered look into the ups and downs of building a business. Through live input and community discussion, the goal is to learn together, grow together, and build stronger foundations for our ventures.\n\nEach edition of Startup Huddle will feature a different theme — keeping the format fresh, relevant, and driven by the needs of our founder community.",
+      "description": "Startup Huddle: From Start to Scale \u2013 Building a Strong Foundation, is a bold and new monthly series hosted at 22 On Sloane, where alumni and resident founders come together to share what they\u2019re building, the challenges they\u2019re facing, and get real-time feedback from their peers and ecosystem mentors.\n\n \n\nEach session features two entrepreneurs who take us behind the scenes of their startup journey \u2014 offering an unfiltered look into the ups and downs of building a business. Through live input and community discussion, the goal is to learn together, grow together, and build stronger foundations for our ventures.\n\nEach edition of Startup Huddle will feature a different theme \u2014 keeping the format fresh, relevant, and driven by the needs of our founder community.",
       "aiHint": "Business Networking Event",
       "imageUrl": "https://www.22onsloane.co/wp-content/uploads/2025/07/Website-Banner-StartUp-Huddles-01.png",
       "id": "7D2QetgCDGTUefaouDag"
@@ -868,7 +868,7 @@
       "time": "18:00 onwards",
       "location": "Workshop17, V&A Waterfront, Cape Town",
       "locationUrl": "https://maps.google.com/?q=Workshop17+V%26A+Waterfront",
-      "description": "An exclusive, in-person networking event for startup founders and investors in the Cape Town ecosystem. Build connections, share ideas, and discover collaboration opportunities over drinks and canapés.",
+      "description": "An exclusive, in-person networking event for startup founders and investors in the Cape Town ecosystem. Build connections, share ideas, and discover collaboration opportunities over drinks and canap\u00e9s.",
       "imageUrl": "https://images.unsplash.com/photo-1556761175-5973dc0f32e7?q=80&w=600&h=400&fit=crop",
       "aiHint": "networking event people"
     },
@@ -2493,7 +2493,13 @@
       "nonce": "4mdavc6jl0t"
     }
   },
-  "users": [],
+  "users": [
+    {
+      "email": "khulekani@22onsloane.co",
+      "tenantId": "22onsloane",
+      "role": "admin"
+    }
+  ],
   "tenants": [
     {
       "id": "22onsloane",
