--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "react-modal-video": "^2.0.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "^0.0.0",
     "react-scroll-to-top": "^3.0.0",
     "react-slick": "^0.30.3",
     "react-slider": "^2.0.6",
@@ -67,7 +66,9 @@
     "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "@vitejs/plugin-react": "4.3.4",
+    "vite": "5.4.20"
   },
   "resolutions": {
     "lodash": "^4.17.21"
@@ -80,14 +81,16 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript-eslint/parser": "^8.44.1",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2",
-    "vite": "^5.4.2"
+    "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": ">=20 <25",
+    "npm": ">=10 <12"
   }
 }
