--- a/package.json
+++ b/package.json
@@ -3,94 +3,96 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "npm@10.9.0",
   "scripts": {
+    "prebuild": "node -e \"require('fs').accessSync('node_modules/vite/dist/node/cli.js')\"",
     "dev": "vite --host localhost",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/modifiers": "^7.0.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@fullcalendar/core": "^6.1.10",
-    "@fullcalendar/daygrid": "^6.1.18",
-    "@fullcalendar/interaction": "^6.1.18",
-    "@fullcalendar/react": "^6.1.18",
-    "@fullcalendar/timegrid": "^6.1.18",
-    "@hello-pangea/dnd": "^17.0.0",
-    "@iconify-json/solar": "^1.2.0",
-    "@phosphor-icons/react": "^2.1.7",
-    "@popperjs/core": "^2.11.8",
-    "@ramonak/react-progress-bar": "^5.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
-    "apexcharts": "^4.4.0",
-    "axios": "^1.12.2",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.5.0",
-    "cors": "^2.8.5",
-    "datatables.net": "^2.1.8",
-    "datatables.net-dt": "^2.3.2",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "firebase": "^12.3.0",
-    "firebase-admin": "^13.4.0",
-    "flatpickr": "^4.6.13",
-    "helmet": "^8.1.0",
-    "highlight.js": "^11.11.1",
-    "isotope-layout": "^3.0.6",
-    "jquery": "^3.7.1",
-    "jsvectormap": "^1.3.1",
-    "lightgallery": "^2.8.3",
-    "lightgallery.js": "^1.4.0",
-    "masonry-layout": "^4.2.2",
-    "quill": "^2.0.3",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.7.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-bootstrap": "^2.10.10",
-    "react-chartjs-2": "^5.3.0",
-    "react-datepicker": "^7.4.0",
-    "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-modal-video": "^2.0.2",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.22.1",
-    "react-scroll-to-top": "^3.0.0",
-    "react-slick": "^0.30.3",
-    "react-slider": "^2.0.6",
-    "react-toastify": "^10.0.6",
-    "slick-carousel": "^1.8.1",
-    "uuid": "^10.0.0",
-    "web-vitals": "^2.1.4",
-    "wowjs": "^1.1.3",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@dnd-kit/sortable": "8.0.0",
+    "@fullcalendar/core": "6.1.18",
+    "@fullcalendar/daygrid": "6.1.18",
+    "@fullcalendar/interaction": "6.1.18",
+    "@fullcalendar/react": "6.1.18",
+    "@fullcalendar/timegrid": "6.1.18",
+    "@hello-pangea/dnd": "17.0.0",
+    "@iconify-json/solar": "1.2.0",
+    "@phosphor-icons/react": "2.1.7",
+    "@popperjs/core": "2.11.8",
+    "@ramonak/react-progress-bar": "5.2.0",
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "animate.css": "4.1.1",
+    "apexcharts": "4.4.0",
+    "axios": "1.12.2",
+    "bootstrap": "5.3.3",
+    "chart.js": "4.5.0",
+    "cors": "2.8.5",
+    "datatables.net": "2.1.8",
+    "datatables.net-dt": "2.3.2",
+    "dotenv": "17.2.1",
+    "express": "5.1.0",
+    "firebase": "12.3.0",
+    "firebase-admin": "13.4.0",
+    "flatpickr": "4.6.13",
+    "helmet": "8.1.0",
+    "highlight.js": "11.11.1",
+    "isotope-layout": "3.0.6",
+    "jquery": "3.7.1",
+    "jsvectormap": "1.3.1",
+    "lightgallery": "2.8.3",
+    "lightgallery.js": "1.4.0",
+    "masonry-layout": "4.2.2",
+    "quill": "2.0.3",
+    "react": "18.2.0",
+    "react-apexcharts": "1.7.0",
+    "react-beautiful-dnd": "13.1.1",
+    "react-bootstrap": "2.10.10",
+    "react-chartjs-2": "5.3.0",
+    "react-datepicker": "7.4.0",
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "1.6.5",
+    "react-modal-video": "2.0.2",
+    "react-quill": "2.0.0",
+    "react-router-dom": "6.22.1",
+    "react-scroll-to-top": "3.0.0",
+    "react-slick": "0.30.3",
+    "react-slider": "2.0.6",
+    "react-toastify": "10.0.6",
+    "slick-carousel": "1.8.1",
+    "uuid": "10.0.0",
+    "web-vitals": "2.1.4",
+    "wowjs": "1.1.3",
     "@vitejs/plugin-react": "4.3.4",
     "vite": "5.4.20"
   },
   "resolutions": {
-    "lodash": "^4.17.21"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@iconify/react": "^5.2.1",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/parser": "^8.44.1",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "@eslint/js": "9.19.0",
+    "@iconify/react": "5.2.1",
+    "@types/express": "5.0.3",
+    "@types/node": "24.3.0",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "@typescript-eslint/parser": "8.44.1",
+    "eslint": "9.19.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-refresh": "0.4.18",
+    "globals": "15.14.0",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.9.2"
   },
   "engines": {
-    "node": ">=20 <25",
-    "npm": ">=10 <12"
+    "node": "20.x",
+    "npm": "10.x"
   }
 }
