--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "postinstall": "node ./scripts/ensure-vite-dist.mjs"
+    "postinstall": "node ./scripts/ensure-vite-dist.mjs && node ./scripts/ensure-service-account.mjs"
   },
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
