--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 # Set the backend API used by the dev server proxy, e.g. http://localhost:5055
 VITE_PROXY_TARGET=http://localhost:5055
 
+# Production API URL (required for Vercel deployment)
+VITE_API_URL=https://your-backend-domain.com
+
