--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "datatables.net-dt": "2.3.2",
     "dotenv": "17.2.1",
     "express": "5.1.0",
+    "express-rate-limit": "8.1.0",
     "firebase": "12.3.0",
     "firebase-admin": "13.4.0",
     "flatpickr": "4.6.13",
@@ -46,10 +47,12 @@
     "highlight.js": "11.11.1",
     "isotope-layout": "3.0.6",
     "jquery": "3.7.1",
+    "jsonwebtoken": "9.0.2",
     "jsvectormap": "1.3.1",
     "lightgallery": "2.8.3",
     "lightgallery.js": "1.4.0",
     "masonry-layout": "4.2.2",
+    "morgan": "1.10.0",
     "quill": "2.0.3",
     "react": "18.2.0",
     "react-apexcharts": "1.7.0",
@@ -70,6 +73,7 @@
     "uuid": "10.0.0",
     "web-vitals": "2.1.4",
     "wowjs": "1.1.3",
+    "zod": "3.23.8",
     "@vitejs/plugin-react": "4.3.4",
     "vite": "5.4.20"
   },
