--- a/.vercelignore
+++ b/.vercelignore
@@ -6,7 +6,13 @@ node_modules/
 .env.test.local
 .env.production.local
 backend/
+backend/**/*
 scripts/
 tools/
 secrets/
 *.pid
+*.log
+src/exportData.cjs
+src/importData.cjs
+src/serviceAccountKey.json
+serviceAccountKey.json
