--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "typescript": "5.9.2"
   },
   "engines": {
-    "node": "20.x",
-    "npm": "10.7.x"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
