Fixed 404 error on vercel

--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
       "destination": "/api/index.js"
     },
     {
-      "source": "/((?!api|backend).*)",
+      "source": "/((?!api|backend|_next|assets|favicon).*)",
       "destination": "/index.html"
     }
   ],
