--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "out    }
+  ]
+}irectory": "dist",
   "functions": {
     "api/index.js": {
       "maxDuration": 30
