--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "firebase-admin": "^13.5.0",
     "helmet": "^7.2.0",
     "morgan": "^1.10.1"
   }
